even more tweaks

--- a/Urban System-FloorSpace-Density-Final.ipynb
+++ b/Urban System-FloorSpace-Density-Final.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# I. Introduction\n",
     "\n",
-    "In this study we explore multiple variables to measure urban density of New York City. We use building data, tax lot data and census tract data to generate variables representing urban density. The City of New York publish datasets on building, tax lot and census data; therefore the goal of this project is to explore available datasets, define variables and build a model to capture urban density in NYC. Then we compare these variables against the distance from the center of the city, which we defined as the location of the Empire State Building in midtown Manhattan. "
+    "In this study we explore multiple variables to measure urban density of New York City. We use building data, tax lot data and census tract data to generate variables representing urban density. The City of New York publishes datasets on building, tax lot and census data; therefore the goal of this project is to explore available datasets, define variables and build a model to capture urban density in NYC. Then we compare these variables against the distance from the city center, which we defined as the location of the Empire State Building in midtown Manhattan. "
    ]
   },
   {
@@ -212,9 +212,6 @@
     }
    ],
    "source": [
-    "# geopandas does not support loading direct from a URL, the file must be loaded from the local file system\n",
-    "# dobfile = './geo_export_877760a5-85cd-4289-a939-b086a1e2ac87.shp'\n",
-    "# NYC = gp.GeoDataFrame.from_file(dobfile)\n",
     "dobcsv = r'https://dl.dropboxusercontent.com/s/mlqiycnymwap7yb/building_0316.csv'\n",
     "BFP_BBL = pd.read_csv(dobcsv, header=0, usecols=[0,2,4,8,14], names=['BBL','BIN','YR','HEIGHT','FP_AREA'])\n",
     "BFP_BBL = BFP_BBL[BFP_BBL.YR != 0]\n",
@@ -511,6 +508,7 @@
     "__L__         | Total ___L___ot Area\n",
     "__P__         | Total Building Foot ___P___rint Area\n",
     "__S__         | Total Building Floor ___S___pace Area\n",
+    "\n",
     "\n",
     "$$Lot\\;Density:\\; l = \\frac{L}{T}$$\n",
     "$$Footprint\\text{-}Lot\\;Ratio:\\; r = \\frac{P}{L}$$\n",
